--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+html, body {
+    height: 100%;
+}
+
 body {
     color: #595959;
+}
+
+#root {
+    height: 100%;
 }
 
